--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,7 +18,8 @@
 {% endblock %}
 
 {% block layout %}
-
+    {# Top-horizontal bar with account, notifictions, dashboard links #}
+    {% include "partials/nav_accounts.html" %}
 
     {# Site logo/title, mini-basket, browse dropdown and searchbox #}
     <header class="header container-fluid">
@@ -26,35 +27,34 @@
             <div class="row">
                 {% include "partials/brand.html" %}
                 {# Mini-basket wrapped in a block so some templates can now display it #}
-                {% block mini_basket %}block mini_basket {% include "partials/mini_basket.html" %}{% endblock %}
+                {% block mini_basket %}{% include "partials/mini_basket.html" %}{% endblock %}
             </div>
         </div>
+
+        <!-- Блок навигации по каталогу -->
         {% block navigation %}
-        navigation
             {% include "partials/nav_primary.html" %}
         {% endblock %}
     </header>
 
     {# Main content of page - other layout templates may override this block #}
     {% block content_wrapper %}
-     block content_wrapper
         <div class="container-fluid page">
             <div class="page_inner">
-                {% block breadcrumbs %} block breadcrumbs {% endblock %}
+                {% block breadcrumbs %}{% endblock %}
                 {% block header %}
                     <div class="page-header action">
-                        <h1>{% block headertext %}headertext{% endblock %}</h1>
+                        <h1>{% block headertext %}{% endblock %}</h1>
                     </div>
                 {% endblock %}
                 {% include "partials/alert_messages.html" %}
-                {% block subnavigation %}subnavigation{% endblock %}
+                {% block subnavigation %}{% endblock %}
                 <div class="content">
-                    {% block subheader %} subheadersubheader{% endblock subheader %}
+                    {% block subheader %}{% endblock subheader %}
 
                     {# Render promotions #}
                     <div id="promotions">
                         {% for promotion in promotions_page %}
-                            render_promotion promotion
                             {% render_promotion promotion %}
                         {% endfor %}
                     </div>
