--- a/templates/customer/login_registration.html
+++ b/templates/customer/login_registration.html
@@ -7,10 +7,10 @@
 
 {% block breadcrumbs %}
     <ul class="breadcrumb">
-        <li>
-            <a href="{{ homepage_url }}">{% trans 'Home' %}</a>
-        </li>
-        <li class="active">{% trans 'Login or register' %}</li>
+
+            <a href="{{ homepage_url }}">Начало</a>/
+
+        Войти или зарегестрироваться
     </ul>
 {% endblock %}
 
