--- a/templates/customer/registration.html
+++ b/templates/customer/registration.html
@@ -8,10 +8,9 @@
 
 {% block breadcrumbs %}
     <ul class="breadcrumb">
-        <li>
-            <a href="{{ homepage_url }}">{% trans 'Home' %}</a>
-        </li>
-        <li class="active">{% trans 'Register' %}</li>
+
+            <a href="{{ homepage_url }}">Начало</a>/
+         Регистрация
     </ul>
 {% endblock %}
 
