--- a/templates/promotions/home_energoforum.html
+++ b/templates/promotions/home_energoforum.html
@@ -11,7 +11,5 @@
 {% endblock %}
 
 {% block content %}
-Добро пожаловать в Наш магазин.
-Выберити интересущии Вас позиции
-              {% include "partials/nav_primary_energoforum.html" %}
+Ура заработал шаблон
 {% endblock content %}
