--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -5,13 +5,12 @@
 
 {% block breadcrumbs %}
     <ul class="breadcrumb">
-        <li>
-            <a href="{{ homepage_url }}">{% trans 'Home' %}</a>
-        </li>
-        <li>
-            <a href="{% url 'password-reset' %}">{% trans 'Password reset' %}</a>
-        </li>
-        <li class="active">{% trans 'Email sent' %}</li>
+
+        <a href="{{ homepage_url }}">Начало</a>/
+
+
+            <a href="{% url 'password-reset' %}">Сбросить пароль</a>/
+         отправить на email
     </ul>
 {% endblock %}
 
