--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -5,10 +5,10 @@
 
 {% block breadcrumbs %}
 <ul class="breadcrumb">
-    <li>
-        <a href="{{ homepage_url }}">{% trans 'Home' %}</a>
-    </li>
-    <li class="active">{% trans 'Password reset' %}</li>
+
+        <a href="{{ homepage_url }}">Начало</a>/
+
+    Сбросить пароль
 </ul>
 {% endblock %}
 
