--- a/templates/catalogue/browse.html
+++ b/templates/catalogue/browse.html
@@ -13,13 +13,16 @@
 {% block headertext %}{{ summary }}{% endblock %}
 
 {% block breadcrumbs %}
+
     <ul class="breadcrumb">
-        <li>
-            <a href="{{ homepage_url }}">{% trans "Home" %}</a>
-        </li>
-        <li class="active">{{ summary }}</li>
+
+            <a href="{{ homepage_url }}">Начало</a>/
+
+      <!--   <li class="active">{{ summary }}</li>  -->
     </ul>
 {% endblock breadcrumbs %}
+
+
 
 {% block column_left %}
     {% category_tree as tree_categories %}
@@ -31,7 +34,7 @@
                     <li>
                         <a href="{{ tree_category.get_absolute_url }}">
                             {% if tree_category.pk == category.pk %}
-                                <strong>{{ tree_category.name }}</strong>
+                                <strong>{{ tree_category.name }} </strong>
                             {% else %}
                                 {{ tree_category.name }}
                             {% endif %}
