--- a/templates/catalogue/category.html
+++ b/templates/catalogue/category.html
@@ -14,15 +14,15 @@
 
 {% block breadcrumbs %}
     <ul class="breadcrumb">
-        <li>
-            <a href="{{ homepage_url }}">{% trans "Home" %}</a>
-        </li>
+
+            <a href="{{ homepage_url }}">Начало</a>/
+
         {% for category in category.get_ancestors %}
-            <li>
-                <a href="{{ category.get_absolute_url }}">{{ category.name }}</a>
-            </li>
+
+                <a href="{{ category.get_absolute_url }}">{{ category.name }}</a>/
+
         {% endfor %}
-        <li class="active">{{ category.name }}</li>
+        {{ category.name }}
     </ul>
 {% endblock breadcrumbs %}
 
