--- a/templates/partials/nav_primary_energoforum.html
+++ b/templates/partials/nav_primary_energoforum.html
@@ -4,7 +4,7 @@
 
 <div class="navbar primary navbar-static-top navbar-inverse">
     <div class="container-fluid">
-
+     <!--
         <div class="navbar-header pull-right">
             {# This is used in mobile view #}
             <a class="btn btn-default navbar-toggle collapsed" data-toggle="collapse" data-target=".primary-collapse">
@@ -14,8 +14,8 @@
                     <span class="icon-bar"></span>
                 </span>
             </a>
-        </div>
-
+        </div>   -->
+<!--
         <a class="btn btn-default navbar-btn btn-cart navbar-right visible-xs-inline-block" href="{% url 'basket:summary' %}">
             <i class="icon-shopping-cart"></i>
             {% trans "Basket" %}
@@ -32,18 +32,20 @@
             {% endif %}
         </a>
 
-
+-->
         <div class="navbar-collapse primary-collapse collapse">
             {% block nav_dropdown %}
                 <ul id="browse" class="nav navbar-nav">
                     <li class="dropdown active {% if expand_dropdown %}open{% endif %}">
+                     <!--
                         <a href="#" class="dropdown-toggle" {% if not expand_dropdown %} data-toggle="dropdown"{% endif %}>
                             {% trans "Browse store" %}
                             <b class="caret"></b>
                         </a>
+                        -->
                         <ul class="dropdown-menu" data-navigation="dropdown-menu">
                             {% category_tree depth=2 as tree_categories %}
-                            <li><a tabindex="-1" href="{% url 'catalogue:index' %}">{% trans "All products" %}</a></li>
+                            <li><a tabindex="-1" href="{% url 'catalogue:index' %}">Все товары</a></li>
                             {% if tree_categories %}
                                 <li class="divider"></li>
                                 {% for tree_category, info in tree_categories %}
@@ -62,7 +64,7 @@
                             {% endif %}
                             <li class="divider"></li>
                             {% block nav_dropdown_extra_items %}
-                                <li><a href="{% url 'offer:list' %}">{% trans "Offers" %}</a></li>
+                                <li><a href="{% url 'offer:list' %}">Предложения</a></li>
                             {% endblock %}
                         </ul>
                     </li>
@@ -70,7 +72,7 @@
                     {% endblock %}
                 </ul>
             {% endblock %}
-            {% include "partials/search.html" %}
+             <!--   {% include "partials/search.html" %}    -->
         </div><!-- /navbar-collapse -->
     </div>
 </div><!-- /navbar -->
