--- a/templates/partials/search.html
+++ b/templates/partials/search.html
@@ -4,5 +4,5 @@
     <div class="form-group">
         {{ search_form.q }}
     </div>
-    <input type="submit" value="{% trans "Search" %}" class="btn btn-default" />
+    <input type="submit" value="Найти товар" class="btn btn-default" />
 </form>
