--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -5,13 +5,13 @@
 
 {% block breadcrumbs %}
 <ul class="breadcrumb">
-    <li>
-        <a href="{{ homepage_url }}">{% trans 'Home' %}</a>
-    </li>
-        <li>
-            <a href="{% url 'password-reset' %}">{% trans 'Password reset' %}</a>
-        </li>
-    <li class="active">{% trans 'Complete' %}</li>
+
+        <a href="{{ homepage_url }}">Начало</a>/
+
+
+            <a href="{% url 'password-reset' %}">Сбросить пароль</a>/
+
+          Завершить
 </ul>
 {% endblock %}
 
