--- a/templates/base.html
+++ b/templates/base.html
@@ -476,7 +476,7 @@ function DoWin(namehtm,wwin,hwin) {
         <dt>Товаров:</dt>
           <dd>0</dd>
         <dt>На сумму:</dt>
-          <dd>0 грн.</dd>
+          <dd>грн.</dd>
       </dl>
       </span>
       <a href="http://energoforum/shoppingcart.html" class="btn_offer">оформить заказ <span></span></a>
