--- a/templates/promotions/home_energoforum.html
+++ b/templates/promotions/home_energoforum.html
@@ -1,15 +1,12 @@
-{% extends "layout_2_col.html" %}
-{% load i18n %}
-
-{% block navigation %}
-    {% include "partials/nav_primary.html" with expand_dropdown=1 %}
-{% endblock %}
-
-{% block header %}{% endblock %}
-
-{% block column_left %}
-{% endblock %}
+{% extends 'promotions/home.html' %}
 
 {% block content %}
-Ура заработал шаблон
-{% endblock content %}
+    <h3>Добро пожаловать в Наш магазин.</h3>
+
+   <h4>    Выберити интересущии Вас позиции</h4>
+
+   {% include "partials/nav_primary_energoforum.html" %}
+
+
+
+{% endblock %}
